--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">FishroomAndroid</string>
     <string name="via">via</string>
+    <string name="send">Send</string>
+    <string name="send_fail">Send failed!</string>
 </resources>
